--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         h1 {
             font-size: 28px;
             text-align: center;
-            margin-top: 100px;
+            margin-top: 40px;
         }
 
         h2 {
@@ -34,6 +34,12 @@
             content: "-";
             margin-right: 5px;
         }
+        footer {
+            margin-bottom : 50px;
+        }
+        .support {
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
@@ -45,9 +51,16 @@
         <li>잘 산다.</li>
     </ul>
     <p>어떻게 해야 복권을 '잘' 살 수 있을까요?</p>
-    <h2>로또: 실시간 판매량 조회를 통해 예상 당첨금이 높을 때 구매할 수 있도록 도와줍니다.</h2>
-    <h2>산신령 추천 기능: 여러분은 복권 1등을 원하는게 아닐거에요! 1등 당첨금을 원하죠!</h2>
-    <p>사람마다 꿈꾸는 1등 당첨금액이 있습니다. 10억부터 많게는 100억까지, 꿈꾸는 금액에 맞는 로또 조합을 추천해줍니다.</p>
-    <h2>스피또: 출고율과 남아있는 1등 매수를 계산해서, 당첨확률이 높을 때 구매할 수 있도록 도와줍니다.</h2>
+    <h3>로또: 실시간 판매량 조회를 통해 예상 당첨금이 높을 때 구매할 수 있도록 도와줍니다.</h3>
+    <h3>스피또: 출고율과 남아있는 1등 매수를 계산해서, 당첨확률이 높을 때 구매할 수 있도록 도와줍니다.</h3>
+    <h3>산신령 추천 기능: 작게는 10억부터 많게는 100억까지, 꿈꾸는 금액에 맞는 로또 조합을 추천해줍니다.</h3>
+    <div class="support">
+        <h3>지원 및 연락처 정보</h3>
+        <p>문제가 있을 경우, 이메일을 통해 연락주세요: <a href="lottoismath@gmail.com">lottoismath@gmail.com</a></p>
+    </div>
 </body>
+<footer>
+    © 2023 Sabo Inc.
+    <a href="https://sites.google.com/view/lottoismath-privacy-policy/%ED%99%88">개인정보 처리방침</a>
+</footer>
 </html>
