--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 </body>
 <footer>
-    © 2023 Sabo Inc.
+    © 2023 LotteryIsMath Inc.
     <a href="https://sites.google.com/view/lottoismath-privacy-policy/%ED%99%88">개인정보 처리방침</a>
 </footer>
 </html>
