feat: seo metatag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="description" content="복권을 구매하는 가장 똑똑한 방법! 복권 구매 가이드와 팁을 제공하는 앱, 로또와 스피또를 위한 최적의 전략을 제공합니다.">
+    <meta name="keywords" content="로또, 스피또, 복권, 복권 구매, 복권 당첨, 복권 가이드">
+    <meta name="author" content="복권은수학이다 Inc.">
     <title>복권 구매 가이드</title>
     <style>
         body {
@@ -60,7 +63,7 @@
     </div>
 </body>
 <footer>
-    © 2023 LotteryIsMath Inc.
+    © 2023 복권은수학이다 Inc.
     <a href="https://sites.google.com/view/lottoismath-privacy-policy/%ED%99%88">개인정보 처리방침</a>
 </footer>
 </html>
