feat: naver seo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta name="description" content="복권을 구매하는 가장 똑똑한 방법! 복권 구매 가이드와 팁을 제공하는 앱, 로또와 스피또를 위한 최적의 전략을 제공합니다.">
     <meta name="keywords" content="로또, 스피또, 복권, 복권 구매, 복권 당첨, 복권 가이드">
+    <meta property="og:title" content="복권은수학이다 - 복권 구매의 지혜">
+    <meta property="og:description" content="복권을 구매하는 가장 똑똑한 방법! 복권 구매 가이드와 팁을 제공하는 앱, 로또와 스피또를 위한 최적의 전략을 제공합니다.">
+    <meta property="og:image" content="https://kiminki91041463.github.io/images/image_googleplay_graphic.png">
+    <meta property="og:url" content="https://kiminki91041463.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="복권은수학이다">
     <meta name="author" content="복권은수학이다 Inc.">
-    <title>복권 구매 가이드</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>복권은수학이다</title>
     <style>
         body {
             width: 1000px;
@@ -42,6 +49,21 @@
         }
         .support {
             margin-top: 50px;
+        }
+        @media (max-width: 600px) {
+            body {
+                width: 100%;
+                padding: 0 10px;
+                box-sizing: border-box;
+            }
+
+            h1, h2, h3 {
+                font-size: 20px;
+            }
+
+            p, li {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
